kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amaubou
  labels:
    name: amaubou
