kubernetes/db-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: amaubou
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db
      containers:
      - image: mariadb
        name: mariadb
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
