kubernetes/apache-php-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: apache-php
  namespace: amaubou
  labels:
    app: apache-php
spec:
  ports:
    - port: 80
  selector:
    app: apache-php
