kubernetes/db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: amaubou 
  labels:
    app: db
spec:
  ports:
    - port: 3306
  selector:
    app: db
